# knighttime_description_2023_node

./: CMakeLists.txt  README.md  package.xml
config/: joint_names_knighttime_description.yaml
launch/: display.launch  gazebo.launch
meshes/: base_link.STL  claw_box_link.STL  claw_link.STL  extension_link.STL  main_mast_link.STL  second_stage.STL
src/: knighttime_description_node.cpp
test/src/: test_knighttime_description_node.cpp
urdf/: knighttime_description.csv  knighttime_description.urdf
